--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,37 +3,42 @@ version: '3.8'
 services:
   server:
     build: .
-    container_name: kodikos-api-express
+    container_name: kodikos-api
     ports:
-      - 3232:3232
+      - "3232:3232"
     volumes:
       - ./:/app
       - /app/node_modules
     environment:
-    -  PORT=3232
-    - DATABASE_URL="postgresql://postgres:password@localhost:5433/kodikosdb"
-    - BCRYPT_SALT_ROUNDS=5
-    - JWT_SECRET="your-secret-key"
-    - JWT_EXPIRES_IN="30d"
-    - ALLOWED_ORIGINS="http://localhost:8081"
-    - SECURE=false
-
-    restart: always
+      PORT: 3232
+      DATABASE_URL: "postgresql://postgres:password@db:5432/kodikosdb"
+      BCRYPT_SALT_ROUNDS: 5
+      JWT_SECRET: "your-secret-key"
+      JWT_EXPIRES_IN: "30d"
+      ALLOWED_ORIGINS: ""
+      SECURE: false
     depends_on:
-      - db
+      db:
+        condition: service_healthy
+    restart: always
 
   db:
     image: postgres:15
-    container_name: kodikos-db-postgres
+    container_name: kodikos-db
     restart: always
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: password
       POSTGRES_DB: kodikosdb
     ports:
-      - 5433:5432
+      - "5433:5432"   # You can keep this if desired for host access
     volumes:
       - db-data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
 volumes:
-  db-data: 
+  db-data:
